Cox enhancement + code cleanup (#9)
- Update design doc / fix some errors
- Bug Fixes: Corrected Thralls rune ID
- Added combination rune support
- Added CoX — Humidify & Vengeance
- Added CoX — Raid Started Detection
- Addressed warnings regarding deprecated methods, unused parameters, etc
- Updated Unit Tests